# AI-Investment-Firm

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  litestream.yml  pyproject.toml
.github/workflows/: main.yml  pr.yml  release.yml
config/: financebench_eval_holdout.json  litestream.yml  llm.yaml  policy.yaml  rag.yaml  router.yaml  universe.yaml
data/e2e_demo/: run.out  validation_report.txt
data/precomputed/: fundamentals.parquet  risk_metrics.parquet
docs/: CONTRIBUTING.md  PLAN_reports_overhaul.md  README.md  agentcore_mapping.md  architecture.md  eval.md  implementation_summary_plan_1.md  implementation_summary_plan_2.md  path-to-production.md  quickstart.md  runbook.md  technical-overview.md  threat_model.md
firm/: README.md  __init__.py  cli.py  dashboard.py
firm/agentcore/: __init__.py  reporter_adapter.py
firm/agents/: execution.py  hitl.py  monitor.py  pm.py  reporter.py  research.py  risk.py
firm/audit/: log.py
firm/broker/: alpaca_paper.py  capability.py  fake_broker.py  protocol.py
firm/core/: clock.py  config.py  ids.py  models.py  random.py
firm/db/: connection.py  cost_ledger.py  migrations.py  schema.sql
firm/eval/: __init__.py  _dates.py  aggregate.py  benchmarks.py  heartbeat.py  perf_metrics.py  process_metrics.py  regimes.py  runner.py  sufficiency.py
firm/grounding/: __init__.py  judge.py  schema.py
firm/hitl/: __init__.py  notify.py  signing.py  slack.py
firm/llm/: __init__.py  anthropic_client.py  cache.py  cassettes.py  citations.py  client.py  cost.py  messages_client.py  prompts.py  router.py
firm/obs/: __init__.py  spans.py  tracer.py
firm/ops/: __init__.py  check_reports_clean.sh  doctor.py  eval_capture.py  litestream_drill.py  precompute_fundamentals.py  precompute_risk_metrics.py  probe_financebench.py  sanitise_plan.sh
firm/orchestrator/: graph.py  state.py
firm/outbox/: outbox.py
firm/rag/: __init__.py  _rate_limit.py  chunk.py  contextual.py  embed.py  financebench.py  ingest.py  news.py  preprocess.py  qdrant_store.py  rerank.py  retrieve.py  source.py  transcripts.py
firm/reconcile/: boot.py
firm/reports/: __init__.py  daily.py  html.py  reconcile_block.py  xlsx.py
firm/tools/: __init__.py  fundamentals.py  risk_metrics.py
infra/: README.md
infra/terraform/: PLAN.md  main.tf  providers.tf  variables.tf
sample_runs/: README.md
sample_runs/2023-11-08/: README.md  daily_report.html  daily_report.md  decisions.jsonl  positions.xlsx  trace.jsonl
scripts/: build_sample_run_readme.py  capture_dashboard_png.py  check_reports_clean.sh  e2e_demo_run.sh  e2e_demo_validate.py  eval_capture.py  hydrate_sample_db.py  litestream_drill.py  precompute_fundamentals.py  precompute_risk_metrics.py  sanitise_plan.sh
tests/: README.md  conftest.py
(+186 files in other folders)
