[project]
name = "ai-investment-firm"
version = "0.1.0"
description = "Multi-agent AI investment firm — Cato take-home"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    "python-ulid>=2.2",
    "pyyaml>=6.0",
    "click>=8.1",
    "structlog>=24.1",
    "alpaca-py>=0.30",  # optional broker; only imported when ALPACA selected
    "anthropic>=0.39",
    "qdrant-client>=1.11,<1.13",  # keep within one minor of the v1.11 server pinned in docker-compose
    "numpy>=1.26",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "sentence-transformers>=3.0",
    "einops>=0.7",  # required by nomic-embed-text-v1.5 remote modeling code
    "datasets>=2.20",
    "rank-bm25>=0.2.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tiktoken>=0.7",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",  # required by FastAPI for form parsing
    "slack-sdk>=3.27",
    "python-dateutil>=2.9",  # relativedelta for rolling 12-month news window
    "requests>=2.31",  # production HTTP client for news adapter
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",  # only used by fastapi.testclient.TestClient
    "types-openpyxl>=3.1",
    "types-PyYAML>=6.0",
]

[project.scripts]
firm = "firm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "requires_models: tests that need a downloaded model",
    "vcr_replay: replay-mode integration tests using recorded LLM cassettes",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
include = ["firm*"]
